Add PDF viewer and PDF-related features
- Integrate PDF.js for rendering PDF documents
- Add PDFViewer component with advanced controls
- Create PDF utility functions for metadata extraction
- Update ArticleCard and ArticleContent to support PDF content type
- Add sample PDF articles to the dataset
- Refactor UI component variants into a separate file
- Enhance TypeScript configuration for stricter type checking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,20 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "noImplicitAny": false,
-    "noUnusedParameters": false,
+    "strict": true,
+    "noImplicitAny": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "useUnknownInCatchVariables": true,
+    "alwaysStrict": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
-    "allowJs": true,
-    "noUnusedLocals": false,
-    "strictNullChecks": false
+    "allowJs": true
   }
 }
